2005-09-18  Marc Singer  <elf@buici.com>

	* include/attributes.h (__xbss): New attribute macro for easy xbss
	spec.

2005-09-15  Marc Singer  <elf@buici.com>

	* src/lib/env.c (_env_check_magic): Modified the environment check
	before writing to look for a large block of 0xff's before
	declaring the area blank.

2005-09-02  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/apex.lds.S: Needed to set the xbss section to
	NOLOAD so that the loader image wouldn't bloat with BSS areas

2005-08-22  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/apex.lds.S: Reorganized the BSS sections.
	Needed to put the BSS outside of the protected region so that the
	memory scan finds all of memory correctly.  This change also
	prevents some of the BSS memory from being zeroed. 

2005-08-15  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c (target_init): Modified the target
	init for lpd7a404 so that the SMC91x controller works properly on
	the latest lpd7a404 CardEngines; PCN-285 2005.5.4.

2005-08-11  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/lpd7a40x.h (CPLD_CONTROL_WLPEN): Changed
	constant name to match that used by the driver and the LPD79520.

	* src/mach-lh7a40x/timer.c (timer_delta): The interval timer was
	wrong, too.

	* src/mach-lh7a40x/initialize.c: The usleep timer setup was wrong.
	Don't know how this ever worked.  ;-) Had to move it to timer2 so
	that it didn't conflict with the interval timer.

2005-08-10  Marc Singer  <elf@buici.com>

	* src/drivers/drv-mem.c (memory_report): Groomed the memory report
	to eliminate first blank line.

	* src/apex/command.c (exec_monitor): Removed leading whitespace in
	startup command reports.

2005-08-08  Marc Singer  <elf@buici.com>

	* src/apex/cmd-copy.c (cmd_copy): Detecting copy errors and
	returning appropriate error code.

	* src/apex/command.c (exec_monitor): Fixed parser for startup
	command so that semicolon no longer needed at the end of the